kubernetes/apps/media/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    vpn-routed-gateway: "true"
